<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="25dp"
    android:background="@android:color/transparent"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="0dp">

                <ImageView
                    android:id="@+id/ivClose"
                    android:layout_width="@dimen/welcome_menu_icon_height_base"
                    android:layout_height="@dimen/welcome_menu_icon_height_base"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:id="@+id/welcome_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:padding="7dp"
                    android:text="@string/welcome_to"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:padding="2dp"
                    android:text="@string/call_center"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/textsize_base"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_call_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/you_are_able_to_call_this_number" />

                    <TextView
                        android:id="@+id/tv_call_action"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/padding_5"
                        android:text="01816028491"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/or_send_an_message_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/or_send_a_whatsapp_message" />

                    <TextView
                        android:id="@+id/tv_whats_send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:background="@drawable/layout_emails_round"
                        android:gravity="center"
                        android:padding="@dimen/padding_15"
                        android:text="emonrait@gmail.com"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textsize_base" />


                    <TextView
                        android:id="@+id/or_send_an_email_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/or_send_an_email_to" />

                    <TextView
                        android:id="@+id/tv_mail_send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:background="@drawable/layout_emails_round"
                        android:gravity="center"
                        android:padding="@dimen/padding_15"
                        android:text="emonrait@gmail.com"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textsize_base" />

                    <Button
                        android:id="@+id/btn_call"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/margin_10"
                        android:background="@drawable/btn_background_green"
                        android:baselineAlignBottom="true"
                        android:text="@string/call_now"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivPerson"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_corner_button_white"
        android:baselineAlignBottom="false"
        android:src="@drawable/call_center" />


</RelativeLayout>